--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,8 @@ services:
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - 5432:5432
+
+  adminer:
+    image: adminer:latest
+    ports:
+      - 8081:8080
