--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ faker = "^26.0.0"
 sqlalchemy = "^2.0.31"
 psycopg2-binary = "^2.9.9"
 alembic = "^1.13.2"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
